[tool.poetry]
name = "parliamone"
version = "0.1.0"
description = ""
authors = ["Baptiste Fontaine <b@ptistefontaine.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
gunicorn = "^20.1.0"
rcssmin = "^1.1.0"
htmlmin = "^0.1.12"
libsass = "^0.21.0"
Flask-Assets = "^2.0"

[tool.poetry.dev-dependencies]
mypy = "^0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
